tests/11-invalid-expr.stderr
error: Not a valid expression
 --> $DIR/11-invalid-expr.rs:5:23
  |
5 |     #[default(value = "1/")]
  |                       ^^^^
